Adding files for cocoapods compatibility

--- a/CocoapodsIgnore/README
+++ b/CocoapodsIgnore/README
@@ -1,1 +1,1 @@
-This directory exists solely so that something exists for Cocopods to build.  If you are not using the Bazaarvoice SDK via Cocoapods, it can be ignored.
+This directory exists solely so that something exists for Cocoapods to build.  If you are not using the Bazaarvoice SDK via Cocoapods, it can be ignored.
